style: usar Stream.toList() en lugar de Collectors.toList()